# BidSmart

./: .env.example  .env.optimization  .gitignore  .gitmodules  ALGORITHM_ANALYSIS_AND_OPTIMIZATION.md  API_DOCUMENTATION.md  App.tsx  BACKEND_HEALTH_ISSUE_RESOLVED.md  CONVERSATION_DEBUG_GUIDE.md  CONVERSATION_DEBUG_QUICKSTART.md  CONVERSATION_DEBUG_TROUBLESHOOTING.md  DEBUG_BACKUP_MANAGER.md  DOCUMENT_SET_COMPLETE_GUIDE.md  DOCUMENT_SET_IMPLEMENTATION_SUMMARY.md  README.md  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tree_analysis_7ebf7085.md  tsconfig.json  types.ts  vercel.json  vite.config.ts
bid_agents/: DOCUMENT_SET_README.md  TENDER_ANALYZER_README.md  __init__.py  __main__.py  agent_runner.py  analysis_pipeline.py  config.py  content_pipeline.py  main.py  outline_pipeline.py  pyproject.toml  review_pipeline.py  tool_adapters.py
bid_agents/agents/: __init__.py  definitions.py
bid_agents/api/: __init__.py  client.py
bid_agents/company_data/: capabilities.json  past_projects.json  profile.json  team.json
bid_agents/hooks/: __init__.py  governance.py
bid_agents/models/: __init__.py  document_set.py  types.py
bid_agents/orchestrator/: __init__.py  orchestrator.py  prompts.py
bid_agents/pipelines/: document_set_pipeline.py
bid_agents/services/: document_set_compat.py  document_set_merger.py
bid_agents/state/: __init__.py  project_state.py
bid_agents/tests/: test_pricing.py  test_types.py
bid_agents/tools/: __init__.py  analysis_tools.py  company_tools.py  document_set_query.py  document_tools.py  (+8 more)
(+72 files in other folders)
