[project]
name = "bidsmart-agents"
version = "0.1.0"
description = "Multi-agent bid writing system for BidSmart"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "httpx>=0.27",
]

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.34"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
bid-agents = "bid_agents.main:cli_main"
